--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
 body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #1a202c;
-      color: white;
-    }
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: #121212;
+  color: #ffffff;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: stretch;
+}
 
     header {
       position: sticky;
@@ -99,15 +104,6 @@ body {
   box-sizing: border-box;
 }
 
-body {
-  background-color: #121212; /* Темный фон */
-  color: #ffffff;            /* Белый текст */
-  font-family: Arial, sans-serif;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
 .container {
   text-align: center;
